fixed missing margin

--- a/src/app/core/dashboard/deadline/deadline.component.scss
+++ b/src/app/core/dashboard/deadline/deadline.component.scss
@@ -43,6 +43,7 @@
 
 		.actions {
 			opacity: 1;
+			margin-right: 1rem;
 		}
 	}
 
